add more explanatory notes to magnetometer processing

--- a/ECOSAT3_Magnetometer.ipynb
+++ b/ECOSAT3_Magnetometer.ipynb
@@ -13,9 +13,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import scipy.interpolate as spi\n",
-    "import igrf12\n",
-    "\n",
-    "#ds = xr.open_dataset('/Users/simon/Data/StefanMausData/EMAG2_V3/EMAG2_V3_UpCont_Data.nc')\n"
+    "import igrf12\n"
    ]
   },
   {
@@ -2986,7 +2984,7 @@
     }
    ],
    "source": [
-    "# Assign a time index to the \n",
+    "# Assign a time index to the base station data frame\n",
     "df_base_station['timeindex'] = pd.to_datetime(df_base_station['yyyy-MM-dd HH:mm:ss'])\n",
     "df_base_station = df_base_station.set_index('timeindex')\n",
     "\n",
@@ -3039,10 +3037,15 @@
     }
    ],
    "source": [
+    "# plot the difference between the time stamp for each succesive pair of rows. \n",
+    "# Where this is bigger than a second, there is a jump in the data (ie where the magnetometer stopped recording).\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.plot(df.index.to_series().diff())\n",
     "plt.ylim(0,1e14)\n",
     "\n",
+    "# Here we actually use 1 minute as the cutoff to start a new segment\n",
+    "# Then iterate through every row, assign each row the segment number and \n",
+    "# increment this number by one if we detect a time gap in the data series\n",
     "time_diff = df.index.to_series().diff()\n",
     "segment_breaks = time_diff>datetime.timedelta(minutes=1)\n",
     "\n",
@@ -3053,8 +3056,10 @@
     "        counter+=1\n",
     "    segment_numbers.append(counter)\n",
     "    \n",
+    "# add the segment numbers to the dataframe\n",
     "df['segment_numbers'] = segment_numbers\n",
     "\n",
+    "# plot the segment numbers versus time\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.plot(segment_numbers)\n"
    ]
@@ -3078,6 +3083,8 @@
     }
    ],
    "source": [
+    "# Plot the segments with different colors to make sure they look sensible\n",
+    "\n",
     "plt.figure(figsize=(20,20))\n",
     "for segment in np.arange(1,df.segment_numbers.max()):\n",
     "\n",
@@ -3344,6 +3351,7 @@
     }
    ],
    "source": [
+    "# define a function to compute distance (in meters) between points specified as Long-Lat coordinates\n",
     "def ll2dist(lon,lat):\n",
     "    earth_radius = 6378137\n",
     "    lat = lat * np.pi/180\n",
@@ -3355,7 +3363,12 @@
     "    return earth_radius * angles\n",
     "\n",
     "\n",
-    "\n",
+    "# Here, manually define some masks based on time ranges\n",
+    "# These masks were designed by first plotting each segment without any masking \n",
+    "# then visually identifying sections that appear problematic\n",
+    "# typically these are at the start or end of a segment, where the ship velocity is slow \n",
+    "# and the magnetometer readings could be contaminated by the instrument being too close to the ship\n",
+    "# (normally the logging was stopped before this happens, but there may be exceptions)\n",
     "QCmasks = []\n",
     "QCmasks.append(('2019-08-07 11:00:00','2019-08-07 12:00:00'))\n",
     "QCmasks.append(('2019-08-10 08:30:00','2019-08-10 09:00:00'))\n",
@@ -3369,9 +3382,11 @@
     "\n",
     "print(df.segment_numbers.max())\n",
     "\n",
+    "# empty list to place the QC'ed segment dataframes\n",
     "df_QC_list = []\n",
     "\n",
     "\n",
+    "# loop over each segment, create a subset dataframe and apply QC to this\n",
     "for segment in np.arange(1,df.segment_numbers.max()):\n",
     "\n",
     "    subset = df[df.segment_numbers==segment]\n",
@@ -3395,7 +3410,7 @@
     "    time_diff = subset.index.to_series().diff()\n",
     "    velocity = distance_delta[1:]/time_diff.dt.seconds[1:-1]\n",
     "\n",
-    "    \n",
+    "    # Create plot for the segment\n",
     "    plt.figure(figsize=(16,10))\n",
     "    plt.subplot(311)\n",
     "    plt.plot(subset.index[1:-1],velocity)\n",
@@ -3416,6 +3431,7 @@
     "    plt.savefig('./QCPlot_segment%d.pdf' % segment)\n",
     "    plt.close()\n",
     "    \n",
+    "    # here we would also reject segments that are spuriously short (less than 100 seconds)\n",
     "    if len(subset_QC)>100:\n",
     "        df_QC_list.append(subset_QC)\n",
     "\n"
