--- a/ECOSAT3_Magnetometer.ipynb
+++ b/ECOSAT3_Magnetometer.ipynb
@@ -3477,6 +3477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define a function to create wiggle plots, assuming that gmt is available\n",
     "def make_wiggle_plot(region,proj,filename):\n",
     "    os.system('gmt makecpt -Cpolar -T-200/200/10 -D > emag2.cpt')\n",
     "    os.system('gmt makecpt -Cgray -T-5000/0/200 -D > bathym.cpt')\n",
